packages/parser/test/parser/E0123-as-expression.txt
a := test as 1
===== err =====
anonymous:1:13: ParseError: E0123 - Expected type after `as` keyword
1 | a := test as 1
  |             ^
